# Tagging-Music-Sequences

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: gtzan_split.json
models/: gtzan_cnn.pth  simple_cnn.pth
notebooks/: 00_quick_start.ipynb  01_data_loading_gtzan.ipynb  02_data_loading_mtat.ipynb  03_data_loading_fma.ipynb  04_model_cnn.ipynb  05_model_rnn.ipynb  06_training.ipynb  07_inference.ipynb  08_edge_case_analysis.ipynb  edge_case_analysis.ipynb  inference.ipynb  model_advanced_cnn.ipynb  model_cnn.ipynb  training.ipynb
runs/20251127_122428/: changes.md  gtzan_cnn.pth  simple_cnn.pth
runs/20251127_143203/: changes.md  gtzan_cnn.pth
runs/20251127_150146/: changes.md  gtzan_cnn.pth
runs/20251127_154216/: changes.md
runs/20251127_160422/: changes.md
runs/20251127_162412/: changes.md
runs/20251127_172211/: changes.md  gtzan_cnn.pth
runs/20251129_115258/: changes.md  gtzan_cnn.pth
runs/20251129_134828/: changes.md
runs/20251202_104159/: changes.md
runs/20251202_114502/: changes.md  misclassified_songs.csv
utils/: __init__.py  advanced_cnn.py  audio_utils.py  datasets_gtzan.py  gtzan_legacy.py  visualization.py
