[project]
name = "tagging-music-sequences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "markupsafe>=3.0.0",
    "scikit-learn>=1.3.0",
    "torch==2.5.1+cu124",
    "torchaudio==2.5.1+cu124",
    "tqdm>=4.65.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.uv.sources]
markupsafe = { index = "pypi" }
